fixed header element spacing for mobile devices

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,8 @@ header {
   position: relative;
   top: 0;
   right: 0;
-  text-align: center;
+	text-align: center;
+	width: 101%
 }
 
 h2 {
@@ -56,8 +57,28 @@ button:hover {
 @media only screen and (max-width: 600px) {
 
 	button.logout-button {
-
+		margin-right: -8px;
 	}
 
 } 
 
+
+/* Small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	header {
+		width:110%;
+	}
+
+	h1 {
+		margin-left: 0;
+	}
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+	h2 {
+		margin: 10px 0;
+	}
+}
